[package]
name = "domaingrep"
version = "0.2.1"
edition = "2021"
description = "Bulk domain availability search CLI tool"
license = "MIT"
repository = "https://github.com/ysm-dev/domaingrep"

[[bin]]
name = "domaingrep"
path = "src/main.rs"

[[bin]]
name = "cache-builder"
path = "src/bin/cache_builder.rs"

[dependencies]
anstyle = "1.0.10"
clap = { version = "4.5.26", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.0.35"
is-terminal = "0.4.13"
memmap2 = "0.9.5"
mio = { version = "0.8.11", features = ["net", "os-poll"] }
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
semver = "1.0.24"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
socket2 = "0.5.8"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.15.0"
wiremock = "0.6.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
